--- a/src/main/resources/assets/mobees/lang/en_us.json
+++ b/src/main/resources/assets/mobees/lang/en_us.json
@@ -214,6 +214,12 @@
   "item.mobees.frame_fertile": "Fertile Frame",
   "item.mobees.frame_crimson": "Crimson Frame",
   "item.mobees.frame_kind": "Kind Frame",
+  "allele.forestry.flower_type.mobees.flower_type_cave": "Cave",
+  "allele.forestry.flower_type.mobees.flower_type_photosynthesis": "Photosynth.",
+  "allele.forestry.flower_type.mobees.flower_type_ancient": "Ancient",
+  "allele.forestry.flower_type.mobees.flower_type_sea": "Sea",
+  "allele.forestry.flower_type.mobees.flower_type_coral": "Coral",
+  "allele.forestry.flower_type.mobees.flower_type_sculk": "Sculk",
   "allele.forestry.flower_type.mobees.flower_type_rock_stone": "Rocks",
   "allele.forestry.flower_type.mobees.flower_type_rock_coal": "Coal",
   "allele.forestry.flower_type.mobees.flower_type_rock_copper": "Copper",
@@ -244,6 +250,29 @@
   "allele.forestry.bee_effect.mobees.bee_effect_cursed": "Cursed",
   "allele.forestry.bee_effect.mobees.bee_effect_arcane": "Arcane",
   "allele.forestry.bee_effect.mobees.bee_effect_librarian": "Librarian",
+
+  "allele.forestry.bee_species.mobees.bee_lush.desc": "\"An offshoot of the Valiant stock, who found refuge beneath the earth.\"|Beekeeping 101",
+  "allele.forestry.bee_species.mobees.bee_verdant.desc": "\"A unique microclimate is maintained within their hives, which promotes the growth of certain plants unable to propagate in captivity.\"|Basil, Botanist",
+  "allele.forestry.bee_species.mobees.bee_luxuriant.desc": "\"So diligent they are in pollinating the vines of the glowing berry, they have even begun glowing themselves!\"|Apiarist's Grimoire",
+  "allele.forestry.bee_species.mobees.bee_kleptoplastic.desc": "\"No longer reliant on nectar, these bees have begun stealing chloroplasts and incorporating them into their own cells!\"|Dr.Livingstone, Geneticist",
+  "allele.forestry.bee_species.mobees.bee_photosynthetic.desc": "\"Photosynthetic pathways have been fully integrated into their genome. Alas, the bees have become plants!\"|Dr.Livingstone, Geneticist",
+  "allele.forestry.bee_species.mobees.bee_autotrophic.desc": "\"The complex geometry of their wings acts to concentrate sunlight onto their skin, increasing their effective surface area.\"|Dr.Livingstone, Geneticist",
+  "allele.forestry.bee_species.mobees.bee_primeval.desc": "\"Back-breeding with more mundane ancient lineages has revealed unexpected atavisms. Fascinating!\"|Prof.Griansworth, Archeologist",
+  "allele.forestry.bee_species.mobees.bee_anachrone.desc": "\"It desperately clings to its ancient power despite breeding efforts. It even steals the life of others to prolong hers!\"|Prof.Griansworth, Archeologist",
+  "allele.forestry.bee_species.mobees.bee_relic.desc": "\"I came upon a fossilized bee while sorting the seeds unearthed by my peculiar friend. Upon return to a heated lab...it began moving!\"|Prof.Griansworth, Archeologist",
+  "allele.forestry.bee_species.mobees.bee_aquatic.desc": "\"A fascinating (and sometimes painful) branch of bees adapted for life underwater. Their taxonomy remains elusive.\"|Seri, Biologist",
+  "allele.forestry.bee_species.mobees.bee_pirate.desc": "\"They bore their hives in the hulls of ships. Once plentiful, now an endangered relic of a bygone age.\"|Seri, Biologist",
+  "allele.forestry.bee_species.mobees.bee_prismatic.desc": "\"The complex compounds secreted by this species closely mimic the properties of prismarine.\"|Seri, Biologist",
+  "allele.forestry.bee_species.mobees.bee_abyssal.desc": "\"A series of epigenetic triggers have harshly modified this specimen to survive the deepest, darkest depths.\"|Seri, Biologist",
+  "allele.forestry.bee_species.mobees.bee_embittered.desc": "\"Legends of bee and sweet honey old be. Age of enslavement from be. Bee than piglin may older be.\"|Toxicognax, Piglin elder",
+  "allele.forestry.bee_species.mobees.bee_spiteful.desc": "\"Curiously, indigenous species do not pollinate. Cross-breeding with new strains only made them hoard the pollen they collect.\"|Dr.Livingstone, Geneticist",
+  "allele.forestry.bee_species.mobees.bee_seething.desc": "\"Driven by instinctual, unquenchable rage, they seek only to burninate every critter unfortunate to cross their path.\"|Dr.Livingstone, Geneticist",
+  "allele.forestry.bee_species.mobees.bee_warped.desc": "\"The nether is currently experiencing a mass extinction of its native flora. Please don't speed it up!\"|Seri, Biologist",
+  "allele.forestry.bee_species.mobees.bee_shulking.desc": "\"Spastic light specs brighter than the bluest skies begin to dance around as panic clouds your eyes...\"|Anya Beletskaya, bystander",
+  "allele.forestry.bee_species.mobees.bee_zombified.desc": "\"Terrible curse us under be. Nether changed never back home can. Piglin, warthog, bee cursed all be. Mushroom not, unfair!\"|Toxicognax, Piglin elder",
+  "allele.forestry.bee_species.mobees.bee_sculk.desc": "\"Perchance in ascertaining such possibility I neglected to ponder... I forgot the rest, likely unimportant.\"|Prof.Griansworth, Archeologist",
+  "allele.forestry.bee_species.mobees.bee_vanilla.desc": "\"Crossbreeding with even distantly related genera appears to be viable, but the offspring are prone to infertility.\"|Dr.Livingstone, Geneticist",
+
   "for.mutation.condition.underground": "Occurs in caves.",
   "item.mobees.bee.modifier.speed_multiplier": "Production",
   "item.mobees.bee.modifier.decay_multiplier": "Decay",
